# UNIX6

./: Makefile  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  data  data2  database.c  database.h  interface.c  interface.h  main.c  main.h  mass.c  mass.h  utilities.c  utilities.h
